--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "node-red-contrib-dobot",
   "version": "1.0.0",
   "description": "Node-RED nodes for controlling Dobot robotic arms",
-  "author": "Your Name",
-  "license": "MIT",
+  "author": "",
+  "license": "",
   "keywords": [
     "node-red",
     "dobot",
@@ -14,7 +14,7 @@
   "node-red": {
     "nodes": {
       "dobot-connection": "nodes/dobot-connection.js",
-      "dobot-dashboard": "nodes/dobot-dashboard.js",
+      "dobot-command": "nodes/dobot-command.js",
       "dobot-move": "nodes/dobot-move.js",
       "dobot-io": "nodes/dobot-io.js",
       "dobot-script": "nodes/dobot-script.js",
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/node-red-contrib-dobot"
+    "url": "https://github.com/corndog2000/node-red-contrib-dobot"
   },
   "dependencies": {},
   "engines": {
