--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-dobot",
-  "version": "7.0.0",
+  "version": "24.0.0",
   "description": "Node-RED nodes for controlling Dobot robotic arms",
   "author": "Joe Schroedl",
   "license": "",
@@ -14,6 +14,7 @@
   "node-red": {
     "nodes": {
       "dobot-connection": "nodes/dobot-connection.js",
+      "dobot-connection-control": "nodes/dobot-connection-control.js",
       "dobot-command": "nodes/dobot-command.js",
       "dobot-move": "nodes/dobot-move.js",
       "dobot-io": "nodes/dobot-io.js",
